[project]
name = "ippt-results-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash-bootstrap-components>=2.0.4",
    "dash[compress]>=3.2.0",
    "fastexcel>=0.16.0",
    "lxml>=6.0.2",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
prod = ["gunicorn>=23.0.0"]
